added some slides, jdk.pdf

--- a/Tut 1/tut1.tex
+++ b/Tut 1/tut1.tex
@@ -123,11 +123,18 @@ string=[b]",%
 \begin{block}{Termin}
 	Jeden Dienstag um 9:45-11:15 Uhr in Raum -109 Geb. 50.34
 \end{block}
+\begin{block}{Kollaboration}
+	Folien und Vorbereitung in Zusammenarbeit mit
+	\begin{itemize}
+		\item Ingo Sobik, Tutorium Di. 11:30-13:00 Uhr
+		\item Michael Friedrich, Tutorium Di \& Do 11:30-13:00 Uhr
+	\end{itemize}
+\end{block}
 \begin{block}{Was machen wir hier?}
 	\begin{itemize}
 		\item Vorlesungsstoff besprechen
 		\item Übungsblätter besprechen
-		\item Fragen klären
+		\item organisatorische und natürlich fachliche Fragen klären
 		\item gemeinsam Programmieren mit Java lernen
 	\end{itemize}
 \end{block}
@@ -145,10 +152,38 @@ string=[b]",%
 	\begin{block}{Übungsschein}
 		\begin{itemize}
 			\item $\geq 50\%$ der Punkte sind zu erreichen
-			\item Übungsschein ist Pflicht um zu Abschlussaufgaben zugelassen zu werden
+			\item Übungsschein ist Pflicht um zu den beiden Abschlussaufgaben zugelassen zu werden
+			\item Übungsaufgaben sind wichtige Vorbereitung auf die Prüfung
 		\end{itemize}
 	\end{block}
-	\huge{$\Rightarrow$ Disclaimer bitte abgeben!}
+	$\Rightarrow$ Disclaimer abgeben
+\end{frame}
+
+
+\begin{frame}{Übungsschein}
+	\begin{alertblock}{Warnung!}
+		\begin{itemize}
+			\item \textbf{Nicht abschreiben!}
+			\item Bei nachgewiesenem Abschreiben erhält man \textbf{keinen Übungsschein!}
+			\item Somit ist man nicht zur Prüfung zugelassen!
+			\item Programmieren ist Teil der Orientierungsprüfung!
+		\end{itemize}
+	\end{alertblock}	
+\end{frame}
+
+\begin{frame}{Nützliche Links}
+	\begin{block}{Links}
+	\begin{itemize}
+		\item Vorlesungswebsite
+		\item[] \url{baldur.iti.kit.edu/programmieren}
+		\item Praktomat (Abgabe der Übungsblätter)
+		\item[] \url{praktomat.info.uni-karlsruhe.de/}
+		\item Ilias
+		\item[] \url{ilias.studium.kit.edu}
+		\item Studierendenportal (Anmeldung Übungsschein/Prüfung)
+		\item[] \url{studium.kit.edu}
+	\end{itemize}
+	\end{block}
 \end{frame}
 
 \begin{frame}{Ilias}
