--- a/Tut 1/tut1.tex
+++ b/Tut 1/tut1.tex
@@ -156,7 +156,6 @@ string=[b]",%
 			\item Übungsaufgaben sind wichtige Vorbereitung auf die Prüfung
 		\end{itemize}
 	\end{block}
-	$\Rightarrow$ Disclaimer abgeben
 \end{frame}
 
 
@@ -169,6 +168,15 @@ string=[b]",%
 			\item Programmieren ist Teil der Orientierungsprüfung!
 		\end{itemize}
 	\end{alertblock}	
+\end{frame}
+
+\begin{frame}{Übungsschein}
+	\begin{block}{erstes Übungsblatt}
+		\begin{itemize}
+			\item \dots bereits auf Vorlesungswebsite verfügbar
+			\item Abgabezeitraum: 04.11. 13 Uhr bis 11.11. 13 Uhr
+		\end{itemize}
+	\end{block}
 \end{frame}
 
 \begin{frame}{Nützliche Links}
@@ -206,7 +214,16 @@ string=[b]",%
 	Passwort für Programmieren: \hspace{1cm} \url{prog-13}
 \end{frame}
 
-\section{Java Einführung}
+\begin{frame}{Erinnerungen / Deadlines}
+	\begin{itemize}
+		\item Abgabe des Disclaimers bis spätestens 4.11.2013
+		\item Anmeldung beim Praktomaten bis spätestens 4.11.2013
+		\item Anmeldung zum Übungsschein bis spätestens 23.12.2013	
+		\item danach Anmeldung zu den Abschlussaufgaben
+	\end{itemize}		
+\end{frame}
+
+\section{Java Installation / Einführung}
 \begin{frame}
 \end{frame}
 
