added java befehlsquiz, minor changes

--- a/Tut 1/tut1.tex
+++ b/Tut 1/tut1.tex
@@ -223,8 +223,32 @@ string=[b]",%
 	\end{itemize}		
 \end{frame}
 
-\section{Java Installation / Einführung}
-\begin{frame}
+\section{Java}
+\subsection{Java: Installation / Einführung}
+\begin{frame}{Java: Installation / Einführung}
+	$\Rightarrow$ anderer Foliensatz
+\end{frame}
+
+\subsection{Java: grundlegende Begriffe}
+\begin{frame}{Java: grundlegende Begriffe}
+	Was ist bzw. macht ...
+	\begin{itemize}
+		\item eine \textbf{Variable}? \pause \visible<2->{Behälter für Werte}
+		\item eine \textbf{Konstante}? \pause \visible<3->{Wert, der sich nicht ändert (final)} 
+		\item eine \textbf{Klasse}? \pause \visible<4->{Bauplan für Objekte} 
+		\item eine \textbf{Funktion}? \pause \visible<5->{Programmkonstrukt mit Rückgabewert und Parametern}
+		\item ein \textbf{Objekt}? \pause \visible<6->{Exemplar eines Datentyps (einer Klasse)}
+		\item eine \textbf{Methode}? \pause \visible<7->{Funktion in einem Objekt}
+		\item ein \textbf{(primitiver) Datentyp}? \pause \visible<8->{Zusammenfassung von Objektmengen mit den darauf definierten Operationen}
+		\item ein \textbf{Attribut}? \pause \visible<9->{Eigenschaft eines konkreten Objekts}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Ende}
+	\begin{center}
+	\huge{Vielen Danke für die Aufmerksamkeit!}
+	\normalsize Habt ihr noch Fragen?
+	\end{center}
 \end{frame}
 
 \appendix
